# gaigar

./: .gitignore  .readthedocs.yaml  404.html  CITATION.cff  README.md  build-env.yaml  dev-env.yaml  env.yaml  index.html  mkdocs-env.yaml  mkdocs.yaml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build.yaml
docs/: index.md
docs/userguide/: lr.md
examples/configs/: lr.training.yaml
examples/features/: ArchIE.features.yaml
gaia/: __main__.py  evaluate.py  infer.py  preprocess.py  simulate.py  train.py
gaia/parsers/: __init__.py  argument_validation.py  eval_parsers.py  lr_parsers.py  unet_parsers.py
gaia/stats/: features.py  metrics.py
gaia/utils/: utils.py
gaigar/: __main__.py  evaluate.py  infer.py  preprocess.py  simulate.py  train.py
gaigar/configs/: __init__.py  feature_config.py
gaigar/generators/: GenomicDataGenerator.py  RandomNumberGenerator.py  genomic_data_generator.py  random_number_generator.py
gaigar/labelers/: BinaryWindowLabeler.py  binary_window_labeler.py
gaigar/models/: LRModel.py  __init__.py  lr_model.py  ml_model.py
gaigar/multiprocessing/: mp_manager.py
gaigar/parsers/: eval_parsers.py  lr_parsers.py  unet_parsers.py
gaigar/preprocessors/: FeatureVectorsPreprocessor.py  GenotypeMatricesPreprocessor.py  feature_vector_preprocessor.py  genotype_matrix_preprocessor.py
gaishi/: __init__.py  __main__.py  evaluate.py  infer.py  preprocess.py  simulate.py  train.py
search/: search_index.json
tests/: test___main__.py  test_evaluate.py  test_infer.py  test_preprocess.py  test_simulate.py  test_train.py
(+186 files in other folders)
